added form, styled a little

--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ tfoot {
    font-weight: bold;
  }
 
- .player>li {
-
- }
-
  .logo {
    width: 100px;
    padding: 5px;
+ }
+
+ .formList {
+   list-style-type: none;
  }
